--- a/app/apps/themes/default/views/layouts/index.html.erb
+++ b/app/apps/themes/default/views/layouts/index.html.erb
@@ -76,7 +76,7 @@
                 <%= raw current_theme.the_field("footer") %>
             </div><!-- .site-info -->
         </footer><!-- #colophon -->
-        <!-- ./footer -->
+        <!-- ./footr -->
     </div>
 </body>
 </html>
